# cvc-approximation

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  adjacency_list_graph.h  approx_cvc.cxx  ilst.h  main.cxx  min_cvc.cxx  ordering.cxx  saturation_degree.h  simple_graph.cxx  simple_graph.h
data/: .gitignore  network_info.tsv  prepare.py  scrape_network_info.js
data/prepared/order_02-16/: Stranke94.txt  Tina_AskCal.txt  Tina_AskCog.txt  Tina_DisCal.txt  Tina_DisCog.txt  soc-tribes.txt
data/prepared/order_1025-2048/: G25.txt  G42.txt  p-hat1500-1.txt
data/prepared/order_129-256/: gen200-p0-9-44.txt
data/prepared/order_16385-32768/: biplane-9.txt
data/prepared/order_17-32/: GD02_a.txt  bio-MUTAG_g1.txt  bn-mouse_visual-cortex_1.txt  johnson8-2-4.txt  mammalia-primate-association.txt  mammalia-raccoon-proximity.txt  moreno_sampson.txt
data/prepared/order_257-512/: SFHH-conf-sensor.txt  gen400-p0-9-55.txt
data/prepared/order_4097-8192/: G59.txt  G64.txt
data/prepared/order_513-1024/: DD68.txt  G7.txt  G9.txt  p-hat1000-2.txt
data/prepared/order_65-128/: ia-hospital-ward-proximity-attr.txt  polbooks.txt
data/prepared/order_8193-16384/: hospital-detailed-list-of-contacts.txt
paper/: source.ltx
src/: ilst.cxx  min_cvc.cxx  ordering.cxx  ordering.h  simple_graph.h
src/ilst_cvc/: ilst.c++  main.c++  ordering.c++
src/min_cvc/: backtracking.c++  backtracking.h  bitmasking.c++  bitmasking.h  main.c++
src/simple_graph/: simple_graph.c++
test_data/: 1_in.txt  1_out.txt  2_in.txt  2_out.txt
tools/: filter_graphs.py  prepare.py  run.py  scrape_network_repository_table.py  utils.py
